--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,7 +13,7 @@ jobs:
       
       - uses: Platane/snk@v3
         with:
-          github_user_name: bettercallninja
+          github_user_name: bettercalliliya
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
